_generated-doc/3.34/config/quarkus-vertx.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a| [[quarkus-vertx_quarkus-vertx-caching]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-caching[`+++quarkus.vertx.caching+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.caching+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables the Vert.x cache.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CACHING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CACHING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-vertx_quarkus-vertx-cache-directory]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cache-directory[`+++quarkus.vertx.cache-directory+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cache-directory+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configure the file cache directory. When not set, the cache is stored in the system temporary directory (read from the `java.io.tmpdir` system property). If the `java.io.tmpdir` is not set `.` is used.

Note that this property is ignored if the `vertx.cacheDirBase` system property is set.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CACHE_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CACHE_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-classpath-resolving]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-classpath-resolving[`+++quarkus.vertx.classpath-resolving+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.classpath-resolving+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disabled the Vert.x classpath resource resolver.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLASSPATH_RESOLVING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLASSPATH_RESOLVING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-vertx_quarkus-vertx-event-loops-pool-size]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-event-loops-pool-size[`+++quarkus.vertx.event-loops-pool-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.event-loops-pool-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The number of event loops. By default, it matches the number of CPUs detected on the system.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENT_LOOPS_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENT_LOOPS_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-max-event-loop-execute-time]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-max-event-loop-execute-time[`+++quarkus.vertx.max-event-loop-execute-time+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.max-event-loop-execute-time+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum amount of time the event loop can be blocked.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_MAX_EVENT_LOOP_EXECUTE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_MAX_EVENT_LOOP_EXECUTE_TIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++2S+++`

a| [[quarkus-vertx_quarkus-vertx-warning-exception-time]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-warning-exception-time[`+++quarkus.vertx.warning-exception-time+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.warning-exception-time+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The amount of time before a warning is displayed if the event loop is blocked.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_WARNING_EXCEPTION_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_WARNING_EXCEPTION_TIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++2S+++`

a| [[quarkus-vertx_quarkus-vertx-max-worker-execute-time]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-max-worker-execute-time[`+++quarkus.vertx.max-worker-execute-time+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.max-worker-execute-time+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum amount of time the worker thread can be blocked.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_MAX_WORKER_EXECUTE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_MAX_WORKER_EXECUTE_TIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++60S+++`

a| [[quarkus-vertx_quarkus-vertx-internal-blocking-pool-size]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-internal-blocking-pool-size[`+++quarkus.vertx.internal-blocking-pool-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.internal-blocking-pool-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The size of the internal thread pool (used for the file system).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_INTERNAL_BLOCKING_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_INTERNAL_BLOCKING_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++20+++`

a| [[quarkus-vertx_quarkus-vertx-queue-size]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-queue-size[`+++quarkus.vertx.queue-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.queue-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The queue size. For most applications this should be unbounded


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-growth-resistance]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-growth-resistance[`+++quarkus.vertx.growth-resistance+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.growth-resistance+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The executor growth resistance.

A resistance factor applied after the core pool is full; values applied here will cause that fraction of submissions to create new threads when no idle thread is available. A value of `0.0f` implies that threads beyond the core size should be created as aggressively as threads within it; a value of `1.0f` implies that threads beyond the core size should never be created.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_GROWTH_RESISTANCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_GROWTH_RESISTANCE+++`
endif::add-copy-button-to-env-var[]
--
|float
|`+++0+++`

a| [[quarkus-vertx_quarkus-vertx-keep-alive-time]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-keep-alive-time[`+++quarkus.vertx.keep-alive-time+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.keep-alive-time+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The amount of time a thread will stay alive with no work.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++30S+++`

a| [[quarkus-vertx_quarkus-vertx-prefill]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-prefill[`+++quarkus.vertx.prefill+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.prefill+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Prefill thread pool when creating a new Executor. When `io.vertx.core.spi.ExecutorServiceFactory++#++createExecutor` is called, initialise with the number of defined threads at startup


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_PREFILL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_PREFILL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-use-async-dns]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-use-async-dns[`+++quarkus.vertx.use-async-dns+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.use-async-dns+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables the async DNS resolver.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_USE_ASYNC_DNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_USE_ASYNC_DNS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pem]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pem[`+++quarkus.vertx.eventbus.key-certificate-pem+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-pem+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
PEM Key/cert config is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pem-keys]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pem-keys[`+++quarkus.vertx.eventbus.key-certificate-pem.keys+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-pem.keys+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of the path to the key files (Pem format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_KEYS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pem-certs]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pem-certs[`+++quarkus.vertx.eventbus.key-certificate-pem.certs+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-pem.certs+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of the path to the certificate files (Pem format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-jks]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-jks[`+++quarkus.vertx.eventbus.key-certificate-jks+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-jks+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
JKS config is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-jks-path]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-jks-path[`+++quarkus.vertx.eventbus.key-certificate-jks.path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-jks.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path of the key file (JKS format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-jks-password]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-jks-password[`+++quarkus.vertx.eventbus.key-certificate-jks.password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-jks.password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Password of the key file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pfx]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pfx[`+++quarkus.vertx.eventbus.key-certificate-pfx+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-pfx+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
PFX config is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pfx-path]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pfx-path[`+++quarkus.vertx.eventbus.key-certificate-pfx.path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-pfx.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path to the key file (PFX format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pfx-password]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-key-certificate-pfx-password[`+++quarkus.vertx.eventbus.key-certificate-pfx.password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.key-certificate-pfx.password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Password of the key.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_KEY_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pem]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pem[`+++quarkus.vertx.eventbus.trust-certificate-pem+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-pem+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
PEM Trust config is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pem-certs]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pem-certs[`+++quarkus.vertx.eventbus.trust-certificate-pem.certs+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-pem.certs+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Comma-separated list of the trust certificate files (Pem format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-jks]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-jks[`+++quarkus.vertx.eventbus.trust-certificate-jks+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-jks+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
JKS config is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-jks-path]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-jks-path[`+++quarkus.vertx.eventbus.trust-certificate-jks.path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-jks.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path of the key file (JKS format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-jks-password]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-jks-password[`+++quarkus.vertx.eventbus.trust-certificate-jks.password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-jks.password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Password of the key file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pfx]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pfx[`+++quarkus.vertx.eventbus.trust-certificate-pfx+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-pfx+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
PFX config is disabled by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pfx-path]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pfx-path[`+++quarkus.vertx.eventbus.trust-certificate-pfx.path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-pfx.path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Path to the key file (PFX format).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pfx-password]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-certificate-pfx-password[`+++quarkus.vertx.eventbus.trust-certificate-pfx.password+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-certificate-pfx.password+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Password of the key.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-accept-backlog]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-accept-backlog[`+++quarkus.vertx.eventbus.accept-backlog+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.accept-backlog+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The accept backlog.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_ACCEPT_BACKLOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_ACCEPT_BACKLOG+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-client-auth]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-client-auth[`+++quarkus.vertx.eventbus.client-auth+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.client-auth+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The client authentication.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++NONE+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-connect-timeout]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-connect-timeout[`+++quarkus.vertx.eventbus.connect-timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.connect-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The connect timeout.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++60S+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-idle-timeout]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-idle-timeout[`+++quarkus.vertx.eventbus.idle-timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.idle-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The idle timeout in milliseconds.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-receive-buffer-size]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-receive-buffer-size[`+++quarkus.vertx.eventbus.receive-buffer-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.receive-buffer-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The receive buffer size.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_RECEIVE_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_RECEIVE_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-reconnect-attempts]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-reconnect-attempts[`+++quarkus.vertx.eventbus.reconnect-attempts+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.reconnect-attempts+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The number of reconnection attempts.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++0+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-reconnect-interval]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-reconnect-interval[`+++quarkus.vertx.eventbus.reconnect-interval+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.reconnect-interval+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The reconnection interval in milliseconds.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++1S+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-reuse-address]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-reuse-address[`+++quarkus.vertx.eventbus.reuse-address+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.reuse-address+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to reuse the address.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_REUSE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_REUSE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-reuse-port]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-reuse-port[`+++quarkus.vertx.eventbus.reuse-port+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.reuse-port+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to reuse the port.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-send-buffer-size]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-send-buffer-size[`+++quarkus.vertx.eventbus.send-buffer-size+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.send-buffer-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The send buffer size.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_SEND_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_SEND_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-so-linger]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-so-linger[`+++quarkus.vertx.eventbus.so-linger+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.so-linger+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The so linger.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_SO_LINGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_SO_LINGER+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-ssl]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-ssl[`+++quarkus.vertx.eventbus.ssl+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.ssl+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or Disabled SSL.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_SSL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-tcp-keep-alive]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-tcp-keep-alive[`+++quarkus.vertx.eventbus.tcp-keep-alive+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.tcp-keep-alive+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether to keep the TCP connection opened (keep-alive).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TCP_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TCP_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-tcp-no-delay]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-tcp-no-delay[`+++quarkus.vertx.eventbus.tcp-no-delay+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.tcp-no-delay+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configure the TCP no delay.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TCP_NO_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TCP_NO_DELAY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-vertx_quarkus-vertx-eventbus-traffic-class]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-traffic-class[`+++quarkus.vertx.eventbus.traffic-class+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.traffic-class+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configure the traffic class.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRAFFIC_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRAFFIC_CLASS+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-eventbus-trust-all]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-eventbus-trust-all[`+++quarkus.vertx.eventbus.trust-all+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.eventbus.trust-all+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables the trust all parameter.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_EVENTBUS_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_EVENTBUS_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-cluster-host]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-host[`+++quarkus.vertx.cluster.host+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The host name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++localhost+++`

a| [[quarkus-vertx_quarkus-vertx-cluster-port]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-port[`+++quarkus.vertx.cluster.port+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.port+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The port.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-cluster-public-host]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-public-host[`+++quarkus.vertx.cluster.public-host+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.public-host+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The public host name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PUBLIC_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PUBLIC_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-cluster-public-port]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-public-port[`+++quarkus.vertx.cluster.public-port+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.public-port+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The public port.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PUBLIC_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PUBLIC_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx_quarkus-vertx-cluster-clustered]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-clustered[`+++quarkus.vertx.cluster.clustered+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.clustered+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enables or disables the clustering.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_CLUSTERED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_CLUSTERED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-cluster-ping-interval]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-ping-interval[`+++quarkus.vertx.cluster.ping-interval+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.ping-interval+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The ping interval.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PING_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PING_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++20S+++`

a| [[quarkus-vertx_quarkus-vertx-cluster-ping-reply-interval]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-cluster-ping-reply-interval[`+++quarkus.vertx.cluster.ping-reply-interval+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.cluster.ping-reply-interval+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The ping reply interval.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PING_REPLY_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PING_REPLY_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++20S+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-cache-max-time-to-live]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-cache-max-time-to-live[`+++quarkus.vertx.resolver.cache-max-time-to-live+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.cache-max-time-to-live+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum amount of time in seconds that a successfully resolved address will be cached.

If not set explicitly, resolved addresses may be cached forever.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_CACHE_MAX_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_CACHE_MAX_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++2147483647+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-cache-min-time-to-live]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-cache-min-time-to-live[`+++quarkus.vertx.resolver.cache-min-time-to-live+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.cache-min-time-to-live+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The minimum amount of time in seconds that a successfully resolved address will be cached.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_CACHE_MIN_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_CACHE_MIN_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++0+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-cache-negative-time-to-live]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-cache-negative-time-to-live[`+++quarkus.vertx.resolver.cache-negative-time-to-live+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.cache-negative-time-to-live+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The amount of time in seconds that an unsuccessful attempt to resolve an address will be cached.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_CACHE_NEGATIVE_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_CACHE_NEGATIVE_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++0+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-max-queries]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-max-queries[`+++quarkus.vertx.resolver.max-queries+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.max-queries+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The maximum number of queries to be sent during a resolution.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_MAX_QUERIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_MAX_QUERIES+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++4+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-query-timeout]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-query-timeout[`+++quarkus.vertx.resolver.query-timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.query-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The duration after which a DNS query is considered to be failed.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_QUERY_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_QUERY_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-vertx_quarkus-vertx[icon:question-circle[title=More information about the Duration format]]
|`+++5S+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-hosts-path]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-hosts-path[`+++quarkus.vertx.resolver.hosts-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.hosts-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the path of an alternate hosts configuration file to use instead of the one provided by the os.

The default value is `null`, so the operating system hosts config (e.g. `/etc/hosts`) is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_HOSTS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_HOSTS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx_quarkus-vertx-resolver-host-refresh-period]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-host-refresh-period[`+++quarkus.vertx.resolver.host-refresh-period+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.host-refresh-period+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the hosts configuration refresh period in millis, `0` (default) disables it.

The resolver caches the hosts configuration (configured using `quarkus.vertx.resolver.hosts-path` after it has read it. When the content of this file can change, setting a positive refresh period will load the configuration file again when necessary.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_HOST_REFRESH_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_HOST_REFRESH_PERIOD+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++0+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-servers]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-servers[`+++quarkus.vertx.resolver.servers+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.servers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the list of DNS server addresses, an address is the IP of the dns server, followed by an optional colon and a port, e.g `8.8.8.8` or `192.168.0.1:40000`. When the list is empty, the resolver will use the list of the system DNS server addresses from the environment, if that list cannot be retrieved it will use Google's public DNS servers `"8.8.8.8"` and `"8.8.4.4"`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_SERVERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_SERVERS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx_quarkus-vertx-resolver-opt-resource-enabled]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-opt-resource-enabled[`+++quarkus.vertx.resolver.opt-resource-enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.opt-resource-enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to true to enable the automatic inclusion in DNS queries of an optional record that hints the remote DNS server about how much data the resolver can read per response.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_OPT_RESOURCE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_OPT_RESOURCE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-rd-flag]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-rd-flag[`+++quarkus.vertx.resolver.rd-flag+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.rd-flag+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the DNS queries _Recursion Desired_ flag value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_RD_FLAG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_RD_FLAG+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-search-domains]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-search-domains[`+++quarkus.vertx.resolver.search-domains+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.search-domains+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the lists of DNS search domains.

When the search domain list is null, the effective search domain list will be populated using the system DNS search domains.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_SEARCH_DOMAINS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_SEARCH_DOMAINS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx_quarkus-vertx-resolver-ndots]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-ndots[`+++quarkus.vertx.resolver.ndots+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.ndots+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set the ndots value used when resolving using search domains, the default value is `-1` which determines the value from the OS on Linux or uses the value `1`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_NDOTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_NDOTS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++-1+++`

a| [[quarkus-vertx_quarkus-vertx-resolver-rotate-servers]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-rotate-servers[`+++quarkus.vertx.resolver.rotate-servers+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.rotate-servers+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to `true` to enable round-robin selection of the dns server to use. It spreads the query load among the servers and avoids all lookup to hit the first server of the list.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_ROTATE_SERVERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_ROTATE_SERVERS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-vertx_quarkus-vertx-resolver-round-robin-inet-address]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-resolver-round-robin-inet-address[`+++quarkus.vertx.resolver.round-robin-inet-address+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.resolver.round-robin-inet-address+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set to `true` to enable round-robin inet address selection of the ip address to use.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_RESOLVER_ROUND_ROBIN_INET_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_RESOLVER_ROUND_ROBIN_INET_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-prefer-native-transport]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-prefer-native-transport[`+++quarkus.vertx.prefer-native-transport+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.prefer-native-transport+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable or disable native transport


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_PREFER_NATIVE_TRANSPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_PREFER_NATIVE_TRANSPORT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-vertx_quarkus-vertx-worker-pool-size]] [.property-path]##link:#quarkus-vertx_quarkus-vertx-worker-pool-size[[.line-through]#`+++quarkus.vertx.worker-pool-size+++`#]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.vertx.worker-pool-size+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
_This property is deprecated: use `quarkus.thread-pool.max-threads` instead._

The size of the worker pool size.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_WORKER_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_WORKER_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`+++${quarkus.thread-pool.max-threads:20}+++`

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-vertx_quarkus-vertx]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
